@@ -15,7 +15,7 @@ java {
 
 ext.isReleaseVersion = !version.endsWith("SNAPSHOT")
 
-sourceCompatibility = 1.8
+sourceCompatibility = 1.11
 group = 'com.github.drapostolos'
 archivesBaseName = 'rdp4j'
 
@@ -27,13 +27,16 @@ dependencies {
     implementation 'org.slf4j:slf4j-api:1.7.21'
     testImplementation 'org.slf4j:slf4j-simple:1.7.21'
     testImplementation 'junit:junit:4.12'
-    testImplementation 'org.powermock:powermock-api-mockito:1.6.5'
-    testImplementation 'org.powermock:powermock-module-junit4:1.6.5'
-    testImplementation 'org.mockito:mockito-core:1.10.19'
+    testImplementation 'org.mockito:mockito-core:3.12.4'
+    testImplementation 'org.powermock:powermock-core:2.0.9'
+    testImplementation 'org.powermock:powermock-api-mockito2:2.0.9'
+    testImplementation 'org.powermock:powermock-module-junit4:2.0.9'
+    testImplementation 'org.powermock:powermock-reflect:2.0.9'
     testImplementation 'org.assertj:assertj-core:3.23.1'
 }
 
 test {
+    jvmArgs ["--add-opens java.base/java.lang=ALL-UNNAMED"]
     finalizedBy jacocoTestReport
 }
 
